# meilan

./: .gitignore  CMakeLists.txt  MeiLan.jks  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
common/: build.gradle
common/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
home/: build.gradle
home/release/: output-metadata.json
home/src/main/: AndroidManifest.xml
home/src/main/jni/: com_meilancycling_mema_ble_sensor_JniBleController.h  jniError.h  sensorCallback.c  sensorCallback.h  sensorConfig.h
home/src/main/jni/fit/: fileOperate.c  fileOperate.h  fit.c  fit.h  fit_activity.c  fit_activity.h  fit_activity_encode.c  fit_activity_encode.h  fit_config.h  fit_crc.c  fit_crc.h  fit_encode.c  fit_encode.h  fit_product.h
home/src/main/jni/sensor/android_interface/: androidOutputInterface.c  androidOutputInterface.h  com_meilancycling_mema_ble_sensor_JniBleController.h  lib_ble.c
home/src/main/jni/sensor/common/: cyclingStatus.h  sensorAPI.c  (+8 more)
home/src/main/res/drawable/: app_progress_drawable.xml  data_progress_drawable.xml  edit_text_bottom.xml  fade_cadence.xml  fade_elevation.xml  fade_hr.xml  fade_power.xml  fade_speed.xml  fade_temperature.xml  height_power_progress_drawable.xml  layer_list_progress_drawable.xml  low_power_progress_drawable.xml  power_progress_drawable.xml  shape_999_18.xml  shape_blue_2.xml  shape_blue_5.xml  shape_blue_activity.xml  shape_circle_29.xml  shape_circle_30.xml  shape_circle_57.xml  shape_circle_66.xml  shape_circle_99.xml  shape_circle_b7.xml  shape_circle_d8.xml  shape_circle_e2.xml  shape_circle_ec.xml  shape_circle_ee.xml  shape_circle_f2.xml  shape_circle_f7.xml  shape_circle_ff.xml  shape_circle_main.xml  shape_circle_orange.xml  shape_circle_ranking_1.xml  shape_circle_ranking_2.xml  shape_circle_ranking_3.xml  shape_circle_red.xml  shape_club_18.xml  shape_d8_7.xml  shape_device_23.xml  shape_e5_23.xml  (+50 more)
home/src/main/res/layout/: activity_about_us.xml  activity_account_security.xml  activity_add_record.xml  activity_add_sensor.xml  activity_binding_email.xml  activity_change_password.xml  activity_choose_country.xml  activity_club_search.xml  activity_comment_list.xml  activity_common_problem.xml  activity_competition.xml  activity_description.xml  activity_details.xml  activity_details_home.xml  activity_device_manage.xml  activity_device_setting.xml  activity_email.xml  activity_favorites.xml  activity_feedback.xml  activity_fit_manager.xml  activity_heart.xml  activity_help_center.xml  activity_home.xml  activity_horizontal_screen.xml  activity_item_view.xml  activity_lap_details.xml  activity_login.xml  activity_map.xml  activity_map_line.xml  activity_modify_nick.xml  activity_news_details.xml  activity_perfect_information.xml  activity_personal_info.xml  activity_personal_share.xml  activity_power.xml  activity_ranking.xml  activity_ranking_view.xml  activity_record_home.xml  activity_scan_sensor.xml  activity_search_device.xml  (+152 more)
home/src/main/res/navigation/: nav_graph_main.xml
home/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
home/src/main/res/values-zh/: strings.xml
(+421 files in other folders)
